# dmzmq

./: .gitignore  .gitmodules  .travis.yml  _dmp_package.json  _package.dm  appveyor.yml  dmzmq.dme
ci/: appveyor-install.bat  appveyor-install.sh  install-libsodium.sh  install-libzmq.sh  libzmq-msys2.patch  setup-env-travis.sh
dmzmq/: _dmzmq_defines.dm  _dmzmq_flags.dm  callback_socket.dm  core.dm  polling.dm  socket.dm
libdmzmq/: CMakeLists.txt
libdmzmq/src/: base.c  base.h  cache_table.c  cache_table.h  config.h  dmzmq.c  dmzmq.h  murmurhash.c  polling.c  polling.h  socket.c  socket.h
scripts/: dm.sh
test/: socket.dm
tests/: _tests.dm  regression.dm  setup.dm  socket.dm
travis/: install-libsodium.sh  install-libzmq.sh
